Fixed content box overflowing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,3 +13,11 @@
 .row.full {
     height: 100vh;
 }
+
+.notes-row:hover {
+    cursor: pointer;
+}
+
+html, body {
+    height: 100%;
+}
